# laba3_OS

./: CMakeLists.txt
src/: helpers.cpp  helpers.h  main.cpp  marker.cpp  marker.h  shared_data.h
tests/: test_helpers.cpp
